alterando para pegar base de appsettings

--- a/CompraGadosApi/appsettings.json
+++ b/CompraGadosApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=BANCO_COMPRA_GADO;Trusted_Connection=True;"
+  }
 }
