--- a/CompraGadosUI/CompraGadosUI/CompraGadosUI.csproj
+++ b/CompraGadosUI/CompraGadosUI/CompraGadosUI.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComboboxItem.cs" />
     <Compile Include="RelatorioCompra.cs">
       <SubType>Form</SubType>
     </Compile>
